update swagger
