# RESTAPI/routes/api/session.js
@@ -12,23 +12,23 @@ const SESSION_EXP = 86400000; //1 dia
 
 sessionRouter.post('/login', (req, res, next) => {
 	if (req.body.nmrCC && req.body.password) {
-		Utilizador.findOne({nmrCC:req.body.nmrCC},function (err, utilizador) {
+		Utilizador.findOne({ nmrCC: req.body.nmrCC }, function (err, utilizador) {
 			if (err) {
 				next(err);
 			} else {
 				if (utilizador) {
-					bcrypt.compare(req.body.password, utilizador.password, function(err, result) {
-						if(result){
+					bcrypt.compare(req.body.password, utilizador.password, function (err, result) {
+						if (result) {
 							const cookie = req.body;
-							Tecnico.findOne({utilizadorId:utilizador._id},function (err, tecnico) {
-								if(err){
+							Tecnico.findOne({ utilizadorId: utilizador._id }, function (err, tecnico) {
+								if (err) {
 									next(err);
 								} else {
 									if (tecnico) {
 										cookie.role = "TECNICO";
-										const jwtToken = jwt.sign(cookie, process.env.JWT_SECRET,{
+										const jwtToken = jwt.sign(cookie, process.env.JWT_SECRET, {
 											expiresIn: 86400 // expires in 24 hours
-											});
+										});
 										res.cookie(
 											'session',
 											jwtToken,
@@ -37,10 +37,10 @@ sessionRouter.post('/login', (req, res, next) => {
 												httpOnly: true
 											}
 										)
-										res.status(200).json({nome: utilizador.primeiroNome,role: "TECNICO",nmrCC:req.body.nmrCC,token:jwtToken})
+										res.status(200).json({ nome: utilizador.primeiroNome, role: "TECNICO", nmrCC: req.body.nmrCC, token: jwtToken })
 									} else {
-										Admin.findOne({utilizadorId:utilizador._id},function (err, admin) {
-											if(err){
+										Admin.findOne({ utilizadorId: utilizador._id }, function (err, admin) {
+											if (err) {
 												next(err);
 											} else {
 												if (admin) {
@@ -48,9 +48,9 @@ sessionRouter.post('/login', (req, res, next) => {
 												} else {
 													cookie.role = "UTILIZADOR"
 												}
-												const jwtToken = jwt.sign(cookie, process.env.JWT_SECRET,{
+												const jwtToken = jwt.sign(cookie, process.env.JWT_SECRET, {
 													expiresIn: 86400 // expires in 24 hours
-													});
+												});
 												res.cookie(
 													'session',
 													jwtToken,
@@ -59,23 +59,23 @@ sessionRouter.post('/login', (req, res, next) => {
 														httpOnly: true
 													}
 												)
-												res.status(200).json({nome: utilizador.primeiroNome,role: cookie.role,nmrCC:req.body.nmrCC,token:jwtToken})
+												res.status(200).json({ nome: utilizador.primeiroNome, role: cookie.role, nmrCC: req.body.nmrCC, token: jwtToken })
 											}
 										})
 									}
 								}
 							})
 						} else {
-							res.status(400).json({status:"Wrong Password"})
+							res.status(400).json({ status: "Wrong Password" })
 						}
 					});
 				} else {
-					res.status(400).json({noUserFound: 'true'});
+					res.status(400).json({ noUserFound: 'true' });
 				}
 			}
-		});	
+		});
 	} else {
-		res.status(400).json({invalidArguments: 'true'});
+		res.status(400).json({ invalidArguments: 'true' });
 	}
 
 })
@@ -96,23 +96,23 @@ sessionRouter.get('/me', (req, res, next) => {
 })
 
 sessionRouter.put('/changePassword', (req, res, next) => {
-	if (req.body.currentPassword && req.body.newPassword){
-		if (req.body.currentPassword == req.user.password){
+	if (req.body.currentPassword && req.body.newPassword) {
+		if (req.body.currentPassword == req.user.password) {
 			bcrypt.hash(req.body.newPassword, 10, function (err, hash) {
 				req.body.newPassword = hash;
-				Utilizador.findOneAndUpdate({nmrCC: req.user.nmrCC}, {password: req.body.newPassword},function (err, utilizador) {
+				Utilizador.findOneAndUpdate({ nmrCC: req.user.nmrCC }, { password: req.body.newPassword }, function (err, utilizador) {
 					if (err) {
 						next(err);
 					} else {
-						res.status(200).json({done: 'true'});
+						res.status(200).json({ done: 'true' });
 					}
 				});
-			  });
+			});
 		} else {
-			res.status(400).json({invalidPassword: 'true'});
+			res.status(400).json({ invalidPassword: 'true' });
 		}
 	} else {
-		res.status(400).json({invalidArguments: 'true'});
+		res.status(400).json({ invalidArguments: 'true' });
 	}
 })
 
